--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>깃 연습</title>
 </head>
 <body>
   <h1>git 연습</h1>
+  <h2>두 번째 제목</h2>
 </body>
 </html>
